dataset1235/2025-2/805158916/users/2029902540/executions/2651470117_2667036473.log
== RUN (2025-08-20 15:04:37)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:04:00)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 15:04:01)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:03:59)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 15:04:35)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:03:44)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print (round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:03:23)
-- CODE: 
tempC = float(intup("Temperatura em Celsius:"))
tempK = tempC + 273.15
print (round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:05:04)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 15:04:26)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:04:31)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:04:52)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:04:32)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 15:05:19)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 15:04:54)
-- CODE: 
tempC = float(intup("Temperatura em Celsius: "))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempC = float(intup("Temperatura em Celsius: "))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
